# s3-zip-rust

./: .env.template  Cargo.toml
src/: main.rs
src/common/: error.rs
src/config/: aws_config.rs
src/controllers/: health_controller.rs  mod.rs  s3_controller.rs
src/models/: file_s3.rs  mod.rs  response.rs
src/routes/: config.rs  health_route.rs  health_routes.rs  mod.rs  s3_route.rs
src/services/: health_service.rs  mod.rs  s3_service.rs
