[package]
name = "s3-zip-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.10.2"
log = "0.4.20"
serde = { version = "1", features = ["derive"] }
aws-config = { version = "1.1.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.16.0"
aws-credential-types = "1.1.6"